# Blog

./: db.sqlite3  pyproject.toml
Portfolio/: settings.py  urls.py
blog/: views.py
blog/static/argon/assets/js/: argon-dashboard.js.map  argon-dashboard.min.js
blog/templates/: base.html  home.html  nav.html
