[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = "David Kettler's Portfolio"
authors = ["David Kettler <davidkettler448@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.4"
graphene = "^3.0"
psycopg2-binary = "^2.9.3"
ipython = "^8.3.0"
django-environ = "^0.8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
